[project]
name = "crosstown-traffic"
version = "0.7.2"
description = "Whatabout the wherabouts"
authors = [{ name = "Vaughn Woerpel", email = "vaughnwoerpel@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "fastapi[standard]",
    "discord-py",
    "coloredlogs",
    "requests",
]

[dependency-groups]
dev = [
  "ruff",
  "pytest"
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = ""
