[project]
name = "crosstown-traffic"
version = "0.8.1"
description = "Whatabout the wherabouts"
authors = [{ name = "Vaughn Woerpel", email = "vaughnwoerpel@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.12,<0.116",
    "discord-py>=2.5.2,<3",
    "coloredlogs>=15.0.1,<16",
    "requests>=2.32.3,<3",
    "aiosqlite>=0.22.1,<0.23",
]

[dependency-groups]
dev = [
  "ruff>=0.11.12,<0.12",
  "pytest>=9.0.3,<10",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = ""
