[project]
name = "crosstown-traffic"
version = "0.9.5"
description = "Whatabout the wherabouts"
authors = [{ name = "Vaughn Woerpel", email = "vaughnwoerpel@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.136,<0.137",
    "discord-py>=2.5.2,<3",
    "coloredlogs>=15.0.1,<16",
    "requests>=2.32.3,<3",
    "aiosqlite>=0.22.1,<0.23",
    "uvicorn>=0.45.0",
]

[dependency-groups]
dev = [
  "ruff>=0.15.11,<0.16",
  "pytest>=9.0.3,<10",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = ""
